--- a/hafhad-dashboard/package.json
+++ b/hafhad-dashboard/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.22.1",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "node-wifi": "^2.0.4",
     "nodemon": "^1.17.2",
     "pi-wifi": "^1.2.0",
     "pug": "2.0.0-beta11",
